--- a/sass/blocks/_contacts.scss
+++ b/sass/blocks/_contacts.scss
@@ -1,17 +1,22 @@
 .contacts {
   &__content {
     display: flex;
+    align-items: flex-start;
     justify-content: space-between;
-    gap: 15px;
+    gap: 24px;
+    position: relative;
   }
 
   &__right {
     width: 100%;
+    height: 700px; 
+    position: sticky;
+    top: 20px;
   }
 
   &__left {
     width: 100%;
-    max-width: 470px;
+    max-width: 448px;
     background: #FFFFFF;
     border-radius: 16px;
     padding: 24px;
@@ -55,30 +60,31 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
-
-    margin-bottom: 35px;
+    margin-bottom: 24px;
     &_item {
       display: flex;
       align-items:  center;
-      gap: 10px;
+      gap: 16px;
       &.warehouse {
         align-items: flex-start;
       }
     }
     &_title {
+      display: block;
       color: #2C3336;
-      font-size: 16px;
+      font-size: 18px;
       font-style: normal;
       font-weight: 500;
-      line-height: normal;
+      line-height: 128%;
     }
     &_description {
       p, a {
-        color: #758289;
+        color: #70828A;
         font-size: 18px;
         font-style: normal;
-        font-weight: 300;
-        line-height: 120%; /* 25.2px */
+        letter-spacing: 0;
+        font-weight: 400;
+        line-height: 140%; /* 25.2px */
       }
       a {
         transition: all .2s ease;
@@ -87,10 +93,11 @@
         }
       }
       .working-hours{
+        display: block;
         color: #0071E3;
         font-size: 12px;
         font-weight: 500;
-        line-height: 140%;
+        line-height: 167%;
       }
     }
   }
@@ -108,7 +115,7 @@
       color: #000;
       font-size: 32px;
       font-weight: 500;
-      line-height: 1;
+      line-height: 128%;
       margin-bottom: 10px;
     }
     &_description {
@@ -205,9 +212,89 @@
     height: 700px;
     border-radius: 30px;
     overflow: hidden;
+   
+
     iframe {
       width: 100%;
       height: 100%;
     }
+  }
+}
+
+// Стили для попапа
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease;
+
+  &.active {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+.popup {
+  border-radius: 24px;
+  padding: 40px;
+  background: linear-gradient(181.01deg, #F0F1F4 1.88%, #C5C7D3 55.56%);
+  max-width: 480px;
+  width: 90%;
+  position: relative;
+  transform: scale(0.8);
+  transition: transform 0.3s ease;
+
+  .popup-overlay.active & {
+    transform: scale(1);
+  }
+
+  &__close {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+  }
+
+  &__content {
+    text-align: center;
+  }
+
+  &__title {
+    font-weight: 600;
+    font-size: 28px;
+    text-align: center;
+    line-height: 100%;
+    margin-bottom: 32px;
+  }
+
+  &__text {
+    color: #70828A;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 128%;
+    margin-bottom: 32px;
+  }
+
+  &__button {
+    padding: 16px 32px;
+    border-radius: 8px;
+    background: #0071E3;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 140%;
+    color: #fff;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    height: 60px;
   }
 }
