--- a/sass/common/_style.scss
+++ b/sass/common/_style.scss
@@ -73,25 +73,25 @@ html {
 }
 
 body {
-  font-family: var(--font-family);
-  overflow-x: hidden;
+  font-family: "Onest", serif;
+  // overflow-x: hidden;
   color: #303239;
   cursor: default;
   position: relative;
   scroll-behavior: smooth;
-  text-rendering: optimizeSpeed;
+  // text-rendering: optimizeSpeed;
   background-color: #F7F7F8;
 }
 
 .container {
-  max-width: 1450px;
+  max-width: 1870px;
   margin: 0 auto;
-  padding: 0 12px;
+  padding: 0 15px;
 }
 
 .main {
   min-height: 100vh;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .lock {
@@ -138,19 +138,19 @@ ul {
 
     transition: all .2s ease;
     &:hover {
-      opacity: 0.7;
+      background: #E1E1E5;
     }
   }
 }
 
 .page__title {
   color: #2C3336;
-  font-size: 40px;
+  font-size: 56px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
 
-  margin-bottom: 12px;
+  margin-bottom: 32px;
 }
 
 @media screen and (max-width: 768px) {
