--- a/sass/blocks/_contacts.scss
+++ b/sass/blocks/_contacts.scss
@@ -150,10 +150,8 @@
 
       button {
         padding: 13px 58px;
-
         border-radius: 12px;
         background: #0071E3;
-
         font-size: 18px;
         font-weight: 500;
         line-height: 140%; /* 25.2px */
@@ -165,7 +163,7 @@
 
       
         &:hover {
-          opacity: 0.7;
+          background-color: #1087FE;
         }
       }
     }
@@ -228,7 +226,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.7);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -296,5 +294,9 @@
     cursor: pointer;
     transition: all 0.2s ease;
     height: 60px;
+
+    &:hover{
+      background-color: #1087FE;
+    }
   }
 }
