--- a/sass/blocks/_contacts.scss
+++ b/sass/blocks/_contacts.scss
@@ -25,7 +25,7 @@
     margin-bottom: 48px;
     &_title {
       color: #2C3336;
-      font-size: 16px;
+      font-size: 18px;
       font-style: normal;
       font-weight: 500;
       line-height: 120%; /* 19.2px */
@@ -119,7 +119,7 @@
       margin-bottom: 10px;
     }
     &_description {
-      color: #758289;
+      color: #70828A;
       font-size: 18px;
       font-weight: 300;
       line-height: 128%;
@@ -192,17 +192,17 @@
   &__requisite {
     &_title {
       color: #000;
-      font-size: 25px;
+      font-size: 32px;
       font-weight: 500;
-      line-height: 1;
+      line-height: 128%;
       margin-bottom: 10px;
     }
     &_content p {
-      color: #758289;
+      color: #70828A;
       font-size: 18px;
       font-style: normal;
-      font-weight: 300;
-      line-height: normal;
+      font-weight: 400;
+      line-height: 128%;
     }
   }
   &__map {
